...
    ChevronLeft(R.drawable.ic_symbol_chevron_left, R.drawable.ic_symbol_chevron_left_fill),
    ChevronRight(R.drawable.ic_symbol_chevron_right, R.drawable.ic_symbol_chevron_right_fill),
    Close(R.drawable.ic_symbol_close, R.drawable.ic_symbol_close_fill),
    ContentCopy(R.drawable.ic_symbol_content_copy, R.drawable.ic_symbol_content_copy_fill),
    ContentPaste(R.drawable.ic_symbol_content_paste, R.drawable.ic_symbol_content_paste_fill),
    Delete(R.drawable.ic_symbol_delete, R.drawable.ic_symbol_delete_fill),
    Devices(R.drawable.ic_symbol_devices, R.drawable.ic_symbol_devices_fill),
    Error(R.drawable.ic_symbol_error, R.drawable.ic_symbol_error_fill),
    Image(R.drawable.ic_symbol_image, R.drawable.ic_symbol_image_fill),
    Info(R.drawable.ic_symbol_info, R.drawable.ic_symbol_info_fill),
    Language(R.drawable.ic_symbol_language, R.drawable.ic_symbol_language_fill),
    LaptopMac(R.drawable.ic_symbol_laptop_mac, R.drawable.ic_symbol_laptop_mac_fill),
    Lock(R.drawable.ic_symbol_lock, R.drawable.ic_symbol_lock_fill),
...
    Pin(R.drawable.ic_symbol_pin, R.drawable.ic_symbol_pin_fill),
    Public(R.drawable.ic_symbol_public, R.drawable.ic_symbol_public_fill),
    QrCode(R.drawable.ic_symbol_qr_code_2, R.drawable.ic_symbol_qr_code_2_fill),
    QrCodeScanner(R.drawable.ic_symbol_qr_code_scanner, R.drawable.ic_symbol_qr_code_scanner_fill),
    Sensors(R.drawable.ic_symbol_sensors, R.drawable.ic_symbol_sensors_fill),
    SensorsOff(R.drawable.ic_symbol_sensors_off, R.drawable.ic_symbol_sensors_off_fill),
    Settings(R.drawable.ic_symbol_settings, R.drawable.ic_symbol_settings_fill),
    Smartphone(R.drawable.ic_symbol_smartphone, R.drawable.ic_symbol_smartphone_fill),
    TabletMac(R.drawable.ic_symbol_tablet_mac, R.drawable.ic_symbol_tablet_mac_fill),
    Timer(R.drawable.ic_symbol_timer, R.drawable.ic_symbol_timer_fill),
    Usb(R.drawable.ic_symbol_usb, R.drawable.ic_symbol_usb_fill),
    VisibilityOff(R.drawable.ic_symbol_visibility_off, R.drawable.ic_symbol_visibility_off_fill),
    Warning(R.drawable.ic_symbol_warning, R.drawable.ic_symbol_warning_fill),
...
